# camorama-patched

./: .cvsignore  .tm_project.cache  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  README  THANKS  TODO  aclocal.m4  camorama.desktop.in  config.h.in  configure  configure.in  configure.scan  intltool-merge  intltool-merge.in
autom4te.cache/: output.0  output.1  traces.0  traces.1
data/: Makefile.am  Makefile.in  camorama.glade  camorama.schemas.in
pixmaps/: Makefile.am  Makefile.in
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in  POTFILES.in  am.po  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  is.po  ja.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  sl.po  sq.po  sr.po  sr@Latn.po  sv.po  th.po  uk.po  (+3 more)
src/: .cvsignore  Makefile.am  Makefile.in  callbacks.c  callbacks.h  camorama-display.c  camorama-display.h  camorama-filter-chain.c  camorama-filter-chain.h  camorama-globals.h  camorama-window.c  capture-strategy-mmap.c  capture-strategy-mmap.h  capture-strategy-read.c  capture-strategy-read.h  capture-strategy.c  capture-strategy.h  fileio.c  fileio.h  filter.c  filter.h  interface.c  interface.h  main.c  support.c  support.h  v4l.c  v4l.h
